--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         </div>
     </section>
     <section class="contact" id="contact">
+        <h1>Contact Us</h1>
         <div class="container-card">
             <div class="card-contact">
                 <img src="src/img/icon-profile.png" alt="inu">
@@ -108,12 +109,12 @@
                 <p>📧 bayhaqiibnu8@gmail.com</p>
             </div>
             <div class="card-contact">
-                <img src="src/img/icon-profile.png" alt="inu">
+                <img src="src/img/ava-ifa.jpg" alt="ifa">
                 <h1>Amalia Arifah P.S.</h1>
-                <p>📧</p>
+                <p>📧ifasopyan18@gmail.com</p>
             </div>
         </div>
     </section>
-    <footer>Made by 💌 Copyright By Team GlassFIT Bangkit 2023</footer>
+    <footer>Made by 💌 ©️ Copyright By Team GlassFIT Bangkit 2023</footer>
 </body>
 </html>
