--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
     </section>
     <section class="contact" id="contact">
-        <h1>Contact Us</h1>
+        <h1 class="judulh1">CONTACT <br>US</h1>
         <div class="container-card">
             <div class="card-contact">
                 <img src="src/img/icon-profile.png" alt="inu">
